# EmpireCore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GEMINI.md  NEXT_STEPS.md  README.md  REFACTOR.md  SESSION_SUMMARY.md  STATUS.md  TODO.md  action_test_log.txt  empire_data.db  empire_data.db-shm  explore_library.py  pyproject.toml  requirements.txt  test_all_imports.py  test_handshake_manual.py
.github/workflows/: ci.yml  publish.yml
archive/: CLEANUP_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  DEV_CONTEXT.md  FINAL_TEST.md  HANDOFF.md  INDEX.md  PROJECT_STRUCTURE.md  PROTOCOL_FINDINGS.md  QUICKSTART.md  REFACTORING_REPORT.md  SESSION_NOTES.md  SUMMARY.txt  TESTING_SUMMARY.md  analyze_dcl.py  analyze_packets.py  deep_explore.py  interactive_explorer.py  manual_test.py  protocol_notes.md  test_actions_safe.py  test_detailed_parsing.py  test_full_attack.py  test_full_functionality.py  test_movements.py  test_movements2.py  test_quick_action.py  test_raw_packets.py  test_real_actions.py  test_state_capture.py  test_with_validation.py
data/: buildings.json  map_objects.json  units.json
docs/: DREAMBOT_FEATURES.md  FEATURE_STATUS.md  GAME_MECHANICS.md  PYGGE_COMPARISON.md  legacy_archive_summary.md
docs/design/: dreambot_analysis.md
examples/: battle_report_analyzer.py  debug_packets.py  demo.py  detailed_state_demo.py  map_persistence_demo.py  movement_tracker.py  quest_monitor.py  resource_monitor_bot.py  simple_farm_bot.py  test_adi.py  test_client.py  world_mapper.py
examples/_archive/: resource_monitor_bot.py  simple_farm_bot.py
src/empire_core/: __init__.py  accounts.py  cli.py  config.py  exceptions.py  pool.py
src/empire_core/automation/: __init__.py  alliance_tools.py  battle_reports.py  building_queue.py  defense_manager.py  farming.py  map_scanner.py  scheduler.py  (+6 more)
tests/: manual_network_test.py  real_network_test.py  test_account_pool.py  test_actions.py  test_events.py  test_handshake.py  test_response_awaiter.py  test_state_population.py
tests/_archive/: manual_state_population_test.py  test_events.py
tools/: wiki_scraper.py
(+47 files in other folders)
