[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "empire-core"
version = "0.1.0"
description = "Asynchronous Python framework for Goodgame Empire"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/EmpireCore"
documentation = "https://empirecore.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9"
pydantic = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23"
black = "^24.0"
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.8"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
