[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "empire-core"
version = "0.1.0"
description = "Asynchronous Python framework for Goodgame Empire"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "E Joseph", email = "east1499@gmail.com" }
]
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.9.0",
]

[project.urls]
Repository = "https://github.com/eschnitzler/EmpireCore"

[project.scripts]
empire = "empire_core.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/empire_core"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"] # Pycodestyle, Pyflakes, Isort, Bugbear
ignore = ["B904", "E501", "E701", "F841", "B007"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
"tests/*" = ["E402"]
"test_all_imports.py" = ["E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
